# flask_urlshortener

./: Dockerfile  config.yaml  docker-compose.yaml  pyproject.toml
app/: __init__.py  routes.py
src/clients/: abstract_client.py  redis_client.py
src/models/: urls.py
src/repositories/: urls.py
tests/repositories/: test_urls.py
